# fastpaws

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/: cd.yml
.github/workflow/: pylint.yml
.github/workflows/: cd.yml  promptfoo.yml  pylint.yml  ruff.yml
backend/: .env.example  README.md  SETUP_PROMPTFOO.md  chain.py  chroma.py  db.py  eval_script.py  extraction.py  generate_yaml_tests.py  main.py  promptfoo_setup.md  promptfooconfig.yaml  redis_client.py  schemas.py  setup.py  utils.py
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  ChatPage.tsx  WelcomePage.tsx  main.tsx
frontend/src/components/messages/: ChatMessages.css  ChatMessages.tsx
frontend/src/components/prompt/: Prompt.css  Prompt.tsx
frontend/src/main-layouts/: App.css  ChatPage.tsx  WelcomePage.tsx
tests/promptfoo/: generate_yaml_tests.py  promptfooconfig.yaml
