[tool.poetry]
name = "ui-projekt-qa-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
transformers = "^4.46.3"
langchain = "^0.3.7"
chromadb = "^0.5.20"
langchain-ollama = "^0.2.0"
fastapi = {extras = ["standard"], version = "^0.115.5"}
aiosqlite = "^0.20.0"
pandas = "^2.2.3"
langchain-core = "^0.3.19"
tensorflow = "^2.18.0"
tf-keras = "^2.18.0"
pydantic = "^2.10.0"
langchain-community = "^0.3.8"
langchain-openai = "^0.2.10"
python-dotenv = "^1.0.1"
langgraph = "^0.2.53"
uvicorn = {extras = ["standard"], version = "^0.32.1"}

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
